# imagescripts-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_in_tmp.sh
modules/cmds/: Cargo.toml  cmds.rs
modules/find/: Cargo.toml  bpp.rs
src/: args.rs  cmds.rs  convert.rs  csv_output.rs  is_apng.rs  jpegquality.rs  lib.rs  main.rs  utils.rs
src/find/: bpp.rs  detailed.rs  monochrome.rs  resizable.rs  similar.rs
src/generate/: ffmpeg_concat.rs  video.rs  zip2video.rs
src/modules/: cmds.rs  utils.rs
src/modules/find/: Cargo.toml  bpp.rs  grayscale.rs  monochrome.rs  resizable.rs  similar.rs
src/modules/generate/: ffmpeg_concat.rs  video.rs  zip2video.rs
