[package]
name = "ims-rs"
version = "0.6.0"
authors = ["Eugene Vert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
clap_complete = "4.2"
rayon = "1.7"

csv = "1.1"
dirs = "5.0"
image = "0.24"
image_hasher = "1.0"
imageproc = "0.23"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.3"
zip = "0.6"
open = "4.0"

tinyfiledialogs = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
