[package]
name = "cmds"
version = "0.1.0"
authors = ["Lilorien <lilorien@localhost.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
clap = "2"
tempfile = "3"
csv = "1.1"

[lib]
name = "cmds"
path = "cmds.rs"
