[package]
name = "cmds"
version = "0.1.1"
authors = ["Lilorien <lilorien@localhost.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
structopt = "0.3"

rayon = "1.5"
tempfile = "3"

image = "0.23"
csv = "1.1"

[lib]
name = "cmds"
path = "cmds.rs"
